Closed Bug 1296123 Opened 8 years ago Closed 8 years ago

SetPerformanceWarning should be called against eCSSProperty_opacity in nsDisplayOpacity::CanUseAsyncAnimations

Categories

(Core :: DOM: Animation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: hiro, Assigned: c3.sazae3)

Details

Attachments

(1 file)

Priority: -- → P2
Assignee: nobody → c3.sazae3
Status: NEW → ASSIGNED
Comment on attachment 8785537 [details] Bug 1296123 - SetPerformanceWarning should be called against eCSSProperty_opacity! https://reviewboard.mozilla.org/r/74716/#review72560 Thanks!
Attachment #8785537 - Flags: review?(hiikezoe) → review+
Pushed by hiikezoe@mozilla-japan.org: https://hg.mozilla.org/integration/autoland/rev/7daaea2c6f3f SetPerformanceWarning should be called against eCSSProperty_opacity! r=hiro
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: