Bug 1296123 - SetPerformanceWarning should be called against eCSSProperty_opacity! r=hiro

MozReview-Commit-ID: BCcXiRUui7Z